--- a/module_base/build.gradle
+++ b/module_base/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -7,16 +7,13 @@ android {
     compileSdk appConfig.compileSdk
 
     defaultConfig {
-        applicationId "com.smart1010.mvvmdemo"
         minSdk appConfig.minSdk
         targetSdk appConfig.targetSdk
-        versionCode appConfig.versionCode
-        versionName appConfig.versionName
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
 
-        resourcePrefix appResourcePrefix.module_main
-        multiDexEnabled true
+        resourcePrefix appResourcePrefix.module_base
     }
 
     buildTypes {
@@ -44,5 +41,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation project(path: ':module_base')
+    api "androidx.multidex:multidex:${appDependencies.multidex}"
+    api "androidx.appcompat:appcompat:${appDependencies.appcompat}"
+    api "com.google.android.material:material:${appDependencies.material}"
+    api "androidx.constraintlayout:constraintlayout:${appDependencies.constraintlayout}"
 }
