--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -17,6 +18,17 @@ android {
 
         resourcePrefix appResourcePrefix.module_main
         multiDexEnabled true
+
+        /* javaCompileOptions {
+             annotationProcessorOptions {
+                 arguments = [AROUTER_MODULE_NAME: project.getName()]
+             }
+         }*/
+        kapt {
+            arguments {
+                arg("AROUTER_MODULE_NAME", project.getName())
+            }
+        }
     }
 
     buildTypes {
@@ -44,5 +56,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    kapt "com.alibaba:arouter-compiler:1.5.2"
+//    implementation "com.alibaba:arouter-api:1.5.2"
     implementation project(path: ':module_base')
 }
