--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MvvmDemo">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.ARoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
