--- a/config.gradle
+++ b/config.gradle
@@ -20,11 +20,13 @@ ext {
             appcompat       : "1.3.1",
             material        : "1.4.0",
             constraintlayout: "2.0.4",
-            multidex        : "2.0.1"
+            multidex        : "2.0.1"//多dex
     ]
 
     /*第三方引用库版本*/
     appExternal = [
-            appcompattt: "1.3.1"
+            arouter_api     : "1.5.2",//阿里路由
+            arouter_compiler: "1.5.2",
+            eventbus        : "3.3.1" //事件总线
     ]
 }
