--- a/module_base/build.gradle
+++ b/module_base/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+//    id 'kotlin-kapt'
 }
 
 android {
@@ -14,6 +15,17 @@ android {
         consumerProguardFiles "consumer-rules.pro"
 
         resourcePrefix appResourcePrefix.module_base
+
+//        javaCompileOptions {
+//            annotationProcessorOptions {
+//                arguments = [AROUTER_MODULE_NAME: project.getName()]
+//            }
+//        }
+//        kapt {
+//            arguments {
+//                arg("AROUTER_MODULE_NAME", project.getName())
+//            }
+//        }
     }
 
     buildTypes {
@@ -42,7 +54,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     api "androidx.multidex:multidex:${appDependencies.multidex}"
+
     api "androidx.appcompat:appcompat:${appDependencies.appcompat}"
     api "com.google.android.material:material:${appDependencies.material}"
     api "androidx.constraintlayout:constraintlayout:${appDependencies.constraintlayout}"
+
+    api "com.alibaba:arouter-api:${appExternal.arouter_api}"
+//    kapt "com.alibaba:arouter-compiler:${appExternal.arouter_compiler}"
+
+    api "org.greenrobot:eventbus:${appExternal.eventbus}"
 }
