--- a/module_base/build.gradle
+++ b/module_base/build.gradle
@@ -63,4 +63,5 @@ dependencies {
 //    kapt "com.alibaba:arouter-compiler:${appExternal.arouter_compiler}"
 
     api "org.greenrobot:eventbus:${appExternal.eventbus}"
+    api "com.tencent:mmkv:${appExternal.mmkv}"
 }
