--- a/config.gradle
+++ b/config.gradle
@@ -27,6 +27,7 @@ ext {
     appExternal = [
             arouter_api     : "1.5.2",//阿里路由
             arouter_compiler: "1.5.2",
-            eventbus        : "3.3.1" //事件总线
+            eventbus        : "3.3.1", //事件总线
+            mmkv            : "1.2.14" //sp存储
     ]
 }
