--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,12 +51,13 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    kapt "com.alibaba:arouter-compiler:1.5.2"
+    kapt "com.alibaba:arouter-compiler:${appExternal.arouter_compiler}"
 //    implementation "com.alibaba:arouter-api:1.5.2"
+    kapt "androidx.room:room-compiler:${appExternal.roomVersion}"
+
     implementation project(path: ':module_base')
 }
