--- a/config.gradle
+++ b/config.gradle
@@ -17,19 +17,24 @@ ext {
 
     /*官方引用库版本*/
     appDependencies = [
-            appcompat       : "1.3.1",
-            material        : "1.4.0",
-            constraintlayout: "2.0.4",
+            core_ktx        : "1.7.0",
+            appcompat       : "1.4.1",
+            material        : "1.5.0",
+            constraintlayout: "2.1.3",
             multidex        : "2.0.1"//多dex
     ]
 
     /*第三方引用库版本*/
     appExternal = [
-            arouter_api               : "1.5.2",//阿里路由
-            arouter_compiler          : "1.5.2",
-            eventbus                  : "3.3.1", //事件总线
-            mmkv                      : "1.2.14", //sp存储
-            kotlinx_coroutines_android: "1.5.2", //协程支持
-            viewmodel_ktx             : "2.3.1" //协程支持viewmodel
+            arouter_api       : "1.5.2",//阿里路由
+            arouter_compiler  : "1.5.2",
+            eventbus          : "3.3.1", //事件总线
+            mmkv              : "1.2.14", //sp存储
+            kotlinx_coroutines: "1.5.2", //协程支持
+            viewmodel_ktx     : "2.4.1", //协程支持viewmodel
+            fragment_ktx      : "1.5.4", //viewmodel共享
+            roomVersion       : "2.4.2",//room
+            XXPermissions     : "16.2", //权限
+            leakcanary        : "2.5" //内存泄漏检测
     ]
 }
