--- a/config.gradle
+++ b/config.gradle
@@ -35,6 +35,7 @@ ext {
             fragment_ktx      : "1.5.4", //viewmodel共享
             roomVersion       : "2.4.2",//room
             XXPermissions     : "16.2", //权限
-            leakcanary        : "2.5" //内存泄漏检测
+            leakcanary        : "2.5", //内存泄漏检测
+            glide             : "4.14.2" //内存泄漏检测
     ]
 }
