--- a/module_base/build.gradle
+++ b/module_base/build.gradle
@@ -77,5 +77,5 @@ dependencies {
 
     api "com.github.getActivity:XXPermissions:${appExternal.XXPermissions}"
 
-
+    api "com.github.bumptech.glide:glide:${appExternal.glide}"
 }
