--- a/module_base/build.gradle
+++ b/module_base/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     kapt "androidx.room:room-compiler:${appExternal.roomVersion}"
 
     api "com.github.getActivity:XXPermissions:${appExternal.XXPermissions}"
-
     api "com.github.bumptech.glide:glide:${appExternal.glide}"
+    api "com.squareup.retrofit2:retrofit:${appExternal.retrofit}"
+    api "com.squareup.retrofit2:converter-gson:${appExternal.retrofit}"
+
 }
